Bury engine_output redefinition

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,10 @@
 Package: SASmarkdown
-Version: 0.1.4
-Date: 2017-05-19
+Version: 0.1.5
+Date: 2017-05-20
 Title: SAS Markdown
 Description: Settings and functions to extend the SAS engine.
-Imports:  knitr
+Imports: knitr
 Author: Doug Hemken <hemken@wisc.edu>
 Maintainer: Doug Hemken <hemken@wisc.edu>
 License: MIT + file LICENSE
+RoxygenNote: 6.0.1
