Documentation to match single setup function usage

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,3 +5,6 @@ export(sas_output)
 export(sas_enginesetup)
 export(sashtml)
 export(saslog)
+importFrom("utils", "tail")
+# importFrom("knitr", "is_blank")
+# importFrom("knitr", "wrap_character")
