SAS log cleanup hook

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(sas_output)
 export(sas_enginesetup)
 export(sashtml)
 export(saslog)
+export(loghook)
 importFrom("utils", "tail")
 # importFrom("knitr", "is_blank")
 # importFrom("knitr", "wrap_character")
