Single function hook set

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(sas_enginesetup)
 export(sashtml)
 export(saslog)
 export(sasloghook)
+export(saslog_hookset)
 importFrom("utils", "tail")
 # importFrom("knitr", "is_blank")
 # importFrom("knitr", "wrap_character")
