--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,4 @@
-# Export all names
+# Export funtions called
 export(sas_collectcode)
 export(sas_output)
 export(sas_enginesetup)
@@ -7,6 +7,3 @@ export(saslog)
 export(sasloghook)
 export(saslog_hookset)
 importFrom("utils", "tail")
-
-# importFrom("knitr", "is_blank")
-# importFrom("knitr", "wrap_character")
