--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,11 @@
 Package: SASmarkdown
-Version: 0.3.1
+Version: 0.3.2
 Date: 2017-07-6
 Title: SAS Markdown
 Description: Settings and functions to extend the knitr SAS engine.
 Imports: knitr
 Suggests: rmarkdown
+BuildVignettes: FALSE
 VignetteBuilder: knitr
 Author: Doug Hemken <dehemken@wisc.edu>
 Maintainer: Doug Hemken <dehemken@wisc.edu>
