--- a/inst/doc/vigsource/DESCRIPTION
+++ b/inst/doc/vigsource/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: SASmarkdown
-Version: 0.3.2
-Date: 2017-07-9
+Version: 0.3.3
+Date: 2017-07-10
 Title: 'SAS' Markdown
 Description: Settings and functions to extend the 'knitr' 'SAS' engine.
 Imports: knitr
 Suggests: rmarkdown
-BuildVignettes: no
+BuildVignettes: yes
 VignetteBuilder: knitr
 SystemRequirements: SAS
 Author: Doug Hemken <dehemken@wisc.edu>
