reworking examples with engine lists

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,8 @@ Authors@R: person("Doug", "Hemken", email="dehemken@wisc.edu",
         role=c("aut", "cre"), comment="SSCC, Univ. of Wisconsin-Madison")
 Maintainer: Doug Hemken <dehemken@wisc.edu>
 License: MIT + file LICENSE
+VignetteBuilder: knitr
+Suggests: rmarkdown
 RoxygenNote: 6.0.1
 URL: http://www.ssc.wisc.edu/~hemken/SASworkshops/sas.html#writing-sas-documentation
 BugReports: http://github.com/Hemken/SASmarkdown/issues
