--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: SASmarkdown
-Version: 0.6.0
-Date: 2022-08-08
+Version: 0.6.1
+Date: 2022-08-10
 Title: 'SAS' Markdown
 Description: Settings and functions to extend the 'knitr' 'SAS' engine.
 Imports: knitr(>= 1.21), xfun(>= 0.4)
 SystemRequirements: SAS
-Authors@R: person("Doug", "Hemken", email="dehemken@wisc.edu", 
+Authors@R: c(person("Doug", "Hemken", email="dehemken@wisc.edu", 
         role=c("aut", "cre"), comment="SSCC, Univ. of Wisconsin-Madison"),
-        person("Chao", "Cheng", role="ctb", comment="Statistician, Simcere Pharmaceutical Group Limited")
+        person("Chao", "Cheng", role="ctb", comment="Statistician, Simcere Pharmaceutical Group Limited"))
 Maintainer: Doug Hemken <dehemken@wisc.edu>
 License: MIT + file LICENSE
 BuildVignettes: no
