--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,10 @@
 Package: SASmarkdown
-Version: 0.8.1
-Date: 2023-02-03
+Version: 0.8.2
+Date: 2023-03-09
 Title: 'SAS' Markdown
 Description: Settings and functions to extend the 'knitr' 'SAS' engine.
 Imports: knitr(>= 1.21), xfun(>= 0.4)
+Suggests: rmarkdown
 SystemRequirements: SAS
 Authors@R: c(person("Doug", "Hemken", email="dehemken@wisc.edu", 
         role=c("aut", "cre"), comment="SSCC, Univ. of Wisconsin-Madison"),
